# organize-files

./: LICENSE  README.md  pyproject.toml  setup.py
organize-files/: __init__.py  cli.py  organizer.py
src/organize_files/: __init__.py  cli.py  organize_files.py
